# DungeonCrawl

./: .clang-format  .clang-tidy  .gdb_history  .gitignore  Bugfixes IO Handling.txt  DoxygenConfig  IO_concept.txt  README.md  clang-tidy-command  clang-tidy-fixes.txt  coverage-report.character_stats.c.86b1e3d309aba96604fe704d5a87a5ea.html  coverage-report.combat_mode.c.eb363343cbeea245d45769a16956c0ec.html  coverage-report.database.c.54d076914fb4c6f702754608d65add9a.html  coverage-report.draw_light.c.7396d10192bbf9340404e8531b44a83e.html  coverage-report.functions.html  coverage-report.game.c.d14bd20aa930ec11ff33c54b8bf95883.html  coverage-report.html  coverage-report.items.c.80ae2685d8efa397d8ac569b97ff1be4.html  coverage-report.logger.c.a19c19ca09a04f3bae68a012082d9cd0.html  coverage-report.main.c.803c5170888b8642f2a97e5e9423d399.html  coverage-report.map_generator.c.f1cceb2979da00d39e7264bec1f2ccc1.html  coverage-report.map_mode.c.1d6e75d2eaafb5c20b14e25a9bfdf83a.html  coverage-report.map_populator.c.63bb01305324198be90de99eaa936f44.html  coverage-report.ringbuffer.c.5aa91e836888a8298e6966e28b4dc305.html  fixes.yaml  manual.md  meson.build  repomix-output.txt  repomix-output.xml  run_with_valgrind.sh  sonar-project.properties  windows_setup.md
.github/workflows/: auto-clang-format.yml  build.yml  compile-test.yml  compiletest.yml  develop-workflow.yml  meson-test.yml  mesontests.yml  notcurses_build.yml  release.yml
art/: cover-dungeon-crawl.pixil
database/: database.h
debug/: debug.c  debug.h
docs/: ability_8c.html  ability_8c.js  ability_8c_source.html  ability_8h.html  ability_8h_source.html  ability__database_8c.html  ability__database_8c.js  ability__database_8c_source.html  ability__database_8h.html  ability__database_8h.js  ability__database_8h_source.html  ability__fw_8h.html  ability__fw_8h_source.html  annotated.html  annotated_dup.js  ascii_8h.html  ascii_8h_source.html  character_8c.html  character_8c.js  character_8c_source.html  character_8h.html  character_8h.js  character_8h_source.html  character__database_8c.html  character__database_8c.js  character__database_8c_source.html  character__database_8h.html  character__database_8h.js  character__database_8h_source.html  character__fw_8h.html  character__fw_8h_source.html  classes.html  combat__mode_8c.html  combat__mode_8c.js  combat__mode_8c_source.html  combat__mode_8h.html  combat__mode_8h.js  combat__mode_8h_source.html  combat__mode__local_8c.js  combat__mode__local_8c_source.html  (+388 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  functions_0.js  (+26 more)
documents/: cover-dungeon-crawl.pixil
documents/coverage/: coverage-report.html
documents/erd/: ERD_GameState.drawio  ERD_Localization.drawio
documents/uml/: state_diagram.txt
example/: keyboard.c
resources/database/: dungeoncrawl.db
resources/local/: local_de.properties  local_en.properties
src/: character_stats.c  character_stats.h  colors.h  combat_mode.c  combat_mode.h  common.c  common.h  game.c  game.h  game_content.c  game_content.h  game_data.c  game_data.h  input.c  input.h  items.c  items.h  main.c  main.h  map.h  map_generator.c  map_generator.h  map_generator_fancy.c  map_generator_fancy.h  map_generator_stupid.c  map_generator_stupid.h  map_mode.c  map_mode.h  map_populator.c  map_populator.h
src/ascii_art/: ascii.h
src/asciiart/: ascii.h
src/character/: character.c  character.h  character_fw.h  level.c  level.h  monster.c  monster.h  player.c  player.h  stats.h
src/combat/: ability.c  ability.h  ability_fw.h  character.c  character.h  combat_common.h  combat_mode.c  combat_mode.h  damage.c  damage.h  npc.c  npc.h  pc.c  pc.h
src/database/: database.c  database.h
src/inventory/: inventory_mode.c  inventory_mode.h
src/io/: io_handler.c  io_handler.h  meson.build  notcurses_howto.txt  todos_and_notes.txt
src/io/input/: input_buffer.h  input_handler.c  input_handler.h  input_types.h
src/io/menu/: dialog.c  dialog.h  main_menu.c  main_menu.h  menu.c  menu.h  pause_menu.c  pause_menu.h
src/io/output/: colors.c  colors.h
src/io/output/common/: common_output.c  common_output.h  effect_output.c  effect_output.h  output_handler.c  output_handler.h  text_output.c  text_output.h
src/io/output/media/: audio_output_handler.c  audio_output_handler.h  media_files.h  media_output.c  media_output.h  media_output_handler.c  media_output_handler.h  media_output_old.c  media_output_old.h
src/io/output/specific/: combat_output.c  combat_output.h  inventory_output.c  inventory_output.h  map_output.c  map_output.h  stats_output.c  stats_output.h  wait_output.c  wait_output.h
src/item/: base_item.c  base_item.h  equipable_item.c  equipable_item.h  gear.c  gear.h  gear_identifier.h  loot_generation.c  loot_generation.h  potion.c  potion.h  usable_item.c  usable_item.h
src/items/: equipable_item.c  equipable_item.h  item.h  usable_item.c  usable_item.h
src/local/: local.c  local.h  local_handler.c  local_handler.h  local_strings.h
src/logging/: logger.c  logger.h  logger_config.h  ringbuffer.c  ringbuffer.h
src/map/: map.c  map.h  (+6 more)
test/: README.md  meson.build  test_combat_mode.c  test_data.db  test_database.c  test_database.h  test_game.c  test_helper.c  test_main.c  test_map_mode.c  test_map_mode.h
test/character/: test_character.c
test/combat/: test_combat_mode.c  test_damage.c
test/database/: test_data.db  test_database.c  test_gamestate_database.c
test/logging/: test_ringbuffer.c
test/map/: test_map_generator.c  test_map_mode.c
test/map/draw/: test_draw_light.c
test/map/drawop/: test_draw_light.c  test_draw_light.h
test/memory/: test_memory_management.c
test/stats/: test_stats.c
(+322 files in other folders)
