io_sources = [
  'io_handler.c',
  'input/input_handler.c',
  'output/colors.c',
  'output/common/common_output.c',
  'output/media/media_output.c',
  # The map_output.c will be implemented during integration
  # 'output/specific/map_output.c',
]

io_headers = [
  'io_handler.h',
  'input/input_types.h',
  'input/input_handler.h',
  'output/colors.h',
  'output/common/common_output.h',
  'output/media/media_output.h',
  'output/specific/map_output.h',
]

# This file is for reference only - it will be integrated into the main meson.build
# during the actual integration phase