io_sources = [
  'io_handler.c',
  'input/input_handler.c',
  'output/colors.c',
  'output/common/common_output.c',
  'output/media/media_output.c',
  'output/specific/map_output.c',
  'output/specific/stats_output.c',
  'output/specific/inventory_output.c',
  'output/specific/combat_output.c',
  'menu/menu.c',
  'menu/main_menu.c',
  'menu/pause_menu.c',
  'menu/dialog.c',
]

io_headers = [
  'io_handler.h',
  'input/input_types.h',
  'input/input_handler.h',
  'output/colors.h',
  'output/common/common_output.h',
  'output/media/media_output.h',
  'output/specific/map_output.h',
  'output/specific/stats_output.h',
  'output/specific/inventory_output.h',
  'output/specific/combat_output.h',
  'menu/menu.h',
  'menu/main_menu.h',
  'menu/pause_menu.h',
  'menu/dialog.h',
]

# This file is for reference only - it will be integrated into the main meson.build
# during the actual integration phase